BE: added the following endpoints - [GET] /reportStatus - Get all report status' - [POST] /reportStatus - Create new report status - [GET] /report/user/:id - Get reports by user - [PUT] /report/ - Update/Edit Report
